--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tanyapavliuk.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://Tanyapavliuk.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -12,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.1.0",
